[gd_scene load_steps=3 format=3 uid="uid://crj5smno64rjt"]

[ext_resource type="Script" path="res://scripts/notes.gd" id="1_notes"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.3, 0.5, 0.3, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Notes" type="CanvasLayer"]
script = ExtResource("1_notes")

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Container/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "NOTIȚE"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Container/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
placeholder_text = "Scrie notițele tale aici..."
wrap_mode = 1

[node name="Spacer2" type="Control" parent="Container/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SaveButton" type="Button" parent="Container/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Salvează"

[node name="ExitButton" type="Button" parent="Container/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Ieșire"

[node name="StatusLabel" type="Label" parent="Container/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[connection signal="pressed" from="Container/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
